<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Voter</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="launch">我要发起</string>
	<string name="join">我要参与</string>
	<string name="about">关于</string>
	<string name="welcomeWord">天天投票</string>
    
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="ok">确定</string>
	<string name="cencel">取消</string>
	
    
	<string name="hint_topic">输入你要发起的话题</string>
	<string name="hint_option1">请输入第1个选项</string>
	<string name="hint_option2">请输入第2个选项</string>
	<string name="hint_timelimit">按小时输入时限</string>
	<string name="hint_password">密码框</string>
	<string name="hint_launcher">给自己添一个id吧</string>
	<string name="hint_description">对你的话题进行一些描述</string>
	
	<string name="get_timelimit">设定最长允许投票的时间:</string>
	<string name="get_topic">您将发起的话题是：</string>
	<string name="get_password">请输入密码：</string>
	<string name="get_voteid">请输入id：</string>
	
	<string name="add_option">再加一个</string>
	<string name="vote_type_choose">您的投票将允许：</string>
	<string name="set_vote_right">是否设置投票权限：</string>
	
	<string name="launcher">发起者</string>
	<string name="topic">话题</string>
	<string name="description">问题描述</string>
	<string name="timelimit">时限</string>
	<string name="deadline">结束时间</string>
	<string name="vote_type">投票类型</string>
	<string name="encrypted">是否加密</string>
	<string name="single">单选</string>
	<string name="multiply">多选</string>
	<string name="option">选项</string>
	<string name="voteid">投票id</string>
	
	<string name="fill_white_space">_____</string>
</resources>