<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin"
	tools:context=".Join">

	<TextView
	    android:id="@+id/text_id"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/voteid"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/id"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/get_voteid"
	    android:inputType="number" >
	</EditText>
	
	<ProgressBar
	    android:id="@+id/progress"
	    style="?android:attr/progressBarStyleLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />

	<Button
	    android:id="@+id/button_confirm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ok" />

</TableLayout>