<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Show">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_topic"
    />

     <LinearLayout
        android:id="@+id/newvotes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="vertical"
        >
             
    </LinearLayout>

   <TextView
        android:id="@+id/describe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newvotes_layout"
        android:text="@string/description"/>

      <!-- <TextView
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/describe"
        android:text="@string/encrypted" />-->

    <TextView
        android:id="@+id/launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/describe"
        android:text="@string/launcher" />

    <TextView
        android:id="@+id/timerequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/launcher"
        android:text="@string/timelimit" />

    <TextView
        android:id="@+id/rede_vote_option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerequest"
        />

    <TextView
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
         android:layout_below="@id/rede_vote_option_1"
        android:text="@string/option" />
    <Button
        android:id="@+id/commit"
        android:layout_width="144dp"
        android:layout_height="36dp"
        android:layout_below="@id/choice"
        android:layout_centerHorizontal="true"
        android:background="@drawable/sub"       
        />

 </RelativeLayout>
